Re-adding release directory.

--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ test:
     - luacov -c=spec/.luacov
     - bash <(curl -s https://codecov.io/bash)
     - zip -r dilemma.zip *.lua bootstrap lib
+    - mkdir -p build/release
     - cat dependencies/clua/clua dilemma.zip > build/release/dilemma.bin
     - chmod a+x build/release/dilemma.bin
     - cp README.md build/release
